fix: Fixed height overlap in registration and login pages

--- a/src/styles/chatStyle.scss
+++ b/src/styles/chatStyle.scss
@@ -4,6 +4,9 @@ html {
 body {
   height: --webkit-fill-available;
 }
+.Home {
+  height: --webkit-fill-available;
+}
 .sms {
   display: flex;
   flex-direction: column;
